# random_stuff

./: calendar.ps  camping_checklist.md  cellular_texture.php  foo.stl  humongous_floppy_v2.dmg  p_and_s.php  sqrt.php  sqrt_algo.php  ssfw.img
cryptopals/: Cargo.toml
cryptopals/src/: main.rs
cryptopals/src/set1/: challenge1.rs  challenge2.rs  challenge3.rs  challenge4.rs  challenge5.rs  challenge6.rs  challenge7.rs  challenge8.rs  english.txt  mod.rs
cryptopals/src/set2/: challenge10.rs  challenge11.rs  challenge12.rs  challenge13.rs  challenge14.rs  challenge15.rs  challenge16.rs  challenge9.rs  mod.rs
cryptopals/src/set3/: 21.test_vector  21_gen_test_vector.php  challenge17.rs  challenge18.rs  challenge19.rs  challenge20.rs  challenge21.rs  challenge22.rs  challenge23.rs  challenge24.rs  mod.rs
cryptopals/src/set4/: challenge25.rs  challenge26.rs  challenge27.rs  challenge28.rs  challenge29.rs  challenge30.rs  challenge31.rs  challenge32.rs  mod.rs
cryptopals/src/utils/: aes.rs  base64.rs  hex.rs  md4.rs  mod.rs  mt_rand.rs  pkcs7.rs  sha1.rs  webserver.rs  xor.rs
dali_attack/: Tiff.php  dali_attack.php
opa/: grid.opa  mini_mailinator.opa
perl_golf/: README  check_roman_numeral.php  roman_numeral.pl
php_quines/: 1.php  2.php  3.php  4.php  5.php  6.php
pixpaste/: README  pixpaste.opa
positionqueue/: positionqueue.go  positionqueue_test.go
povray/: dodecahedron.ini  dodecahedron.pov  maze.ini  maze.pov
sqrt/: README
unittest.quaxio.com/: evil_gzip.pl  iframe.php  index.html  lgcookie.pl  redirect_ball.pl  redirect_https_ball.pl  request.pl  (+5 more)
(+90 files in other folders)
