[package]
name = "cryptopals"
version = "0.0.1"
authors = ["Alok Menghrajani <alok@squareup.com>"]

[dependencies]
block-buffer = "0.3"
byte-tools = "0.2"
byteorder = "1.1.0"
digest = "0.7"
fake-simd = "0.1"
num_cpus = "1.0"
rand = "0.3"
rust-crypto = "^0.2"
time = "0.1"

[profile.release]
lto = true
panic = "abort"
